[package]
name = "esp32c6-dev"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://github.com/esp-rs/esp-hal/blob/main/examples

[dependencies]
esp-println = { version = "0.11.0", features = ["esp32c6", "uart", "log"], default-features = false}
esp-hal = {version = "0.20.1", features = ["esp32c6"]}
esp-hal-embassy = { version = "0.3.0", features = ["esp32c6", "integrated-timers"] }
esp-wifi = {version = "0.9.1", features = ["esp32c6", "wifi", "embassy-net", "log"] }
esp-backtrace = { version = "0.14.1", features = ["exception-handler", "panic-handler",  "esp32c6", "println"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }

# defmt = { version = "0.3.8" }

embassy-executor    = { version = "0.6.0", features = ["task-arena-size-12288"] }
embassy-time        = "0.3.2"

embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
embedded-hal-async = "1.0.0"

log = "0.4.22"

static_cell         = { version = "2.1.0" }

embassy-net = { version = "0.4.0", features = [ "tcp", "dhcpv4", "medium-ethernet"] }
smoltcp = { version = "0.11.0", default-features = false, features = [ "medium-ethernet", "socket-raw"] }

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
opt-level        = 3
lto = 'fat'
overflow-checks  = true